--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 </head>
 <body>
     <header><div class="logo">DRENICA<span>SOT</span></div></header>
-    <div class="ticker-wrap"><div class="ticker" id="ticker-text">Duke ngarkuar lajmet e fundit...</div></div>
+    <div class="ticker-wrap"><div class="ticker" id="ticker-text">Duke ngarkuar lajmet...</div></div>
     <div class="container"><div class="news-grid" id="news-container"></div></div>
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyDE_JmY9H_f77kK3O29-p9v0M_VlI",
-            authDomain: "drenicasot-2026.firebaseapp.com",
-            databaseURL: "https://drenicasot-2026-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "drenicasot-2026",
-            storageBucket: "drenicasot-2026.appspot.com",
-            messagingSenderId: "1029384756",
-            appId: "1:1029384756:web:a1b2c3d4e5f6"
+            apiKey: "AIzaSyBh_7BwfNbKbscPSW1ZN9Y_UvAntsjl9Wg",
+            authDomain: "herolind-6ca5f.firebaseapp.com",
+            databaseURL: "https://herolind-6ca5f-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "herolind-6ca5f",
+            storageBucket: "herolind-6ca5f.firebasestorage.app",
+            messagingSenderId: "893085364638",
+            appId: "1:893085364638:web:2db59e6ec72ad7e7c1a68f"
         };
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
