--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,6 @@
         label { font-size: 12px; color: #666; font-weight: bold; }
         input, textarea, select { width: 100%; padding: 12px; margin: 5px 0 20px 0; background: #222; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; }
         button { width: 100%; padding: 15px; background: red; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; }
-        button:hover { background: #cc0000; }
         .item { background: #0a0a0a; padding: 15px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border-radius: 8px; border: 1px solid #222; }
         .btn-del { background: none; color: red; padding: 5px 10px; border: 1px solid red; border-radius: 5px; width: auto; cursor: pointer; }
     </style>
@@ -22,7 +21,7 @@
     <div class="box">
         <h2>PUBLIKO LAJM TË RI</h2>
         <label>TITULLI</label>
-        <input type="text" id="t" placeholder="Shkruaj titullin...">
+        <input type="text" id="t" placeholder="Titulli...">
         <label>FOTO URL</label>
         <input type="text" id="f" placeholder="Linku i fotos...">
         <label>RUBRIKA</label>
@@ -34,20 +33,20 @@
             <option value="DRENICA">Drenica</option>
         </select>
         <label>PËRMBRAJTJA</label>
-        <textarea id="p" rows="4" placeholder="Shkruaj tekstin..."></textarea>
+        <textarea id="p" rows="4" placeholder="Teksti i lajmit..."></textarea>
         <button onclick="save()">PUBLIKO LAJMIN</button>
         <h3 style="margin-top:40px; border-bottom: 1px solid #222; padding-bottom: 10px;">MENAXHO LAJMET</h3>
         <div id="list"></div>
     </div>
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyDE_JmY9H_f77kK3O29-p9v0M_VlI",
-            authDomain: "drenicasot-2026.firebaseapp.com",
-            databaseURL: "https://drenicasot-2026-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "drenicasot-2026",
-            storageBucket: "drenicasot-2026.appspot.com",
-            messagingSenderId: "1029384756",
-            appId: "1:1029384756:web:a1b2c3d4e5f6"
+            apiKey: "AIzaSyBh_7BwfNbKbscPSW1ZN9Y_UvAntsjl9Wg",
+            authDomain: "herolind-6ca5f.firebaseapp.com",
+            databaseURL: "https://herolind-6ca5f-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "herolind-6ca5f",
+            storageBucket: "herolind-6ca5f.firebasestorage.app",
+            messagingSenderId: "893085364638",
+            appId: "1:893085364638:web:2db59e6ec72ad7e7c1a68f"
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
@@ -64,6 +63,7 @@
                 alert("U postua me sukses!");
                 document.getElementById('t').value = '';
                 document.getElementById('p').value = '';
+                document.getElementById('f').value = '';
             } else { alert("Plotëso titullin dhe tekstin!"); }
         }
         db.ref('lajmet').on('value', (snap) => {
