--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         .logo span { color: var(--red); }
         .container { max-width: 1200px; margin: 20px auto; padding: 20px; }
         .news-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); gap: 25px; }
-        .news-card { background: #111; border-radius: 15px; overflow: hidden; border: 1px solid #222; }
-        .media-container { width: 100%; height: 220px; background: #000; }
+        .news-card { background: #111; border-radius: 15px; overflow: hidden; border: 1px solid #222; transition: 0.3s; cursor: pointer; }
+        .news-card:hover { border-color: var(--red); transform: translateY(-5px); }
+        .media-container { width: 100%; height: 220px; background: #000; pointer-events: none; }
         iframe, img { width: 100%; height: 100%; object-fit: cover; border: none; }
         .info { padding: 15px; }
-        .badge { background: var(--red); font-size: 10px; padding: 4px 8px; border-radius: 4px; font-weight: bold; }
-        h2 { font-size: 18px; margin: 10px 0; }
+        .badge { background: var(--red); font-size: 10px; padding: 4px 8px; border-radius: 4px; font-weight: bold; text-transform: uppercase; }
+        h2 { font-size: 18px; margin: 10px 0; color: #fff; }
+        p { color: #888; font-size: 14px; height: 45px; overflow: hidden; }
     </style>
 </head>
 <body>
@@ -27,6 +29,7 @@
     <div class="container"><div class="news-grid" id="news-container"></div></div>
 
     <script>
+        // SHIFRAT E TUA TË FIREBASE
         const firebaseConfig = {
             apiKey: "AIzaSyBh_7BwfNbKbscPSW1ZN9Y_UvAntsjl9Wg",
             authDomain: "herolind-6ca5f.firebaseapp.com",
@@ -43,17 +46,20 @@
             container.innerHTML = '';
             snap.forEach((child) => {
                 const l = child.val();
-                let mediaHTML = l.video ? 
-                    `<iframe src="https://www.youtube.com/embed/${l.video}" allowfullscreen></iframe>` : 
-                    `<img src="${l.foto}">`;
+                const id = child.key; // Kjo është ID-ja unike e lajmit
                 
+                let mediaHTML = l.video ? 
+                    `<iframe src="https://www.youtube.com/embed/${l.video}?autoplay=0" frameborder="0"></iframe>` : 
+                    `<img src="${l.foto}" onerror="this.src='https://via.placeholder.com/400x250/000/ff0000?text=DRENICA+SOT'">`;
+                
+                // Këtu i treguam faqes që kur klikohet karta, të hapet lajmi.html me atë ID
                 container.innerHTML += `
-                    <div class="news-card">
+                    <div class="news-card" onclick="window.location='lajmi.html?id=${id}'">
                         <div class="media-container">${mediaHTML}</div>
                         <div class="info">
                             <span class="badge">${l.kategoria}</span>
                             <h2>${l.titulli}</h2>
-                            <p style="color:#888; font-size:14px;">${l.pershkrimi}</p>
+                            <p>${l.pershkrimi}</p>
                         </div>
                     </div>`;
             });
