--- a/admin.html
+++ b/admin.html
@@ -3,43 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADMIN PANEL - DRENICA SOT</title>
+    <title>ADMIN | DRENICA SOT</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        body { background: #000; color: #fff; font-family: sans-serif; padding: 20px; }
-        .box { max-width: 600px; margin: auto; background: #111; padding: 30px; border-radius: 15px; border: 1px solid #222; }
-        h2 { color: red; text-align: center; text-transform: uppercase; }
-        label { font-size: 12px; color: #666; font-weight: bold; }
-        input, textarea, select { width: 100%; padding: 12px; margin: 5px 0 20px 0; background: #222; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; }
-        button { width: 100%; padding: 15px; background: red; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; }
+        body { background: #050505; color: white; font-family: sans-serif; margin: 0; padding: 15px; }
+        .admin-box { max-width: 600px; margin: auto; background: #111; padding: 25px; border-radius: 15px; border: 1px solid #222; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        h2 { color: red; text-align: center; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 25px; }
+        label { font-size: 11px; color: #888; text-transform: uppercase; font-weight: bold; display: block; margin-bottom: 5px; }
+        input, textarea, select { width: 100%; padding: 12px; margin-bottom: 20px; background: #1a1a1a; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; font-size: 15px; }
+        input:focus, textarea:focus { border-color: red; outline: none; }
+        button { width: 100%; padding: 15px; background: red; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; font-size: 16px; transition: 0.3s; }
+        button:hover { background: darkred; transform: scale(1.02); }
+        .list-title { margin-top: 40px; border-bottom: 2px solid #222; padding-bottom: 10px; font-size: 18px; color: red; }
         .item { background: #0a0a0a; padding: 15px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border-radius: 8px; border: 1px solid #222; }
-        .btn-del { background: none; color: red; padding: 5px 10px; border: 1px solid red; border-radius: 5px; width: auto; cursor: pointer; }
+        .btn-del { background: transparent; color: #ff4444; padding: 6px 12px; border: 1px solid #ff4444; border-radius: 5px; width: auto; font-size: 12px; }
     </style>
 </head>
 <body>
-    <div class="box">
-        <h2>PUBLIKO LAJM / VIDEO</h2>
-        <label>TITULLI</label>
-        <input type="text" id="t" placeholder="Titulli...">
-        <label>FOTO URL (Opsionale nëse ka video)</label>
-        <input type="text" id="f" placeholder="Linku i fotos...">
-        <label>YOUTUBE VIDEO URL (Nëse ka)</label>
-        <input type="text" id="v" placeholder="Psh: https://www.youtube.com/watch?v=XXXXX">
-        <label>RUBRIKA</label>
+    <div class="admin-box">
+        <h2>PANELI I KONTROLLIT</h2>
+        
+        <label>Titulli i Lajmit</label>
+        <input type="text" id="t" placeholder="Shkruaj titullin këtu...">
+
+        <label>Linku i Fotos (URL)</label>
+        <input type="text" id="f" placeholder="Ngjit linkun e fotos...">
+
+        <label>YouTube Video URL (Opsionale)</label>
+        <input type="text" id="v" placeholder="Psh: https://www.youtube.com/watch?v=...">
+
+        <label>Kategoria</label>
         <select id="k">
             <option value="KRYESORE">Kryesore</option>
             <option value="SPORT">Sport</option>
             <option value="DRENICA">Drenica</option>
-            <option value="DIASPORA">Diaspora</option>
             <option value="KULTURË">Kulturë</option>
+            <option value="DIASPORA">Diaspora</option>
         </select>
-        <label>PËRMBRAJTJA</label>
-        <textarea id="p" rows="4" placeholder="Teksti i lajmit..."></textarea>
-        <button onclick="save()">PUBLIKO TANI</button>
-        <h3 style="margin-top:40px; border-bottom: 1px solid #222; padding-bottom: 10px;">MENAXHO LAJMET</h3>
+
+        <label>Përmbajtja e Lajmit</label>
+        <textarea id="p" rows="6" placeholder="Shkruaj tekstin e plotë të lajmit këtu..."></textarea>
+
+        <button onclick="save()">PUBLIKO LAJMIN</button>
+
+        <div class="list-title">LAJMET E FUNDIT</div>
         <div id="list"></div>
     </div>
+
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyBh_7BwfNbKbscPSW1ZN9Y_UvAntsjl9Wg",
@@ -64,17 +75,21 @@
             const titulli = document.getElementById('t').value;
             const videoUrl = document.getElementById('v').value;
             const videoId = getYoutubeId(videoUrl);
+            const foto = document.getElementById('f').value;
             
-            if(titulli) {
+            if(titulli && (foto || videoId)) {
                 db.ref('lajmet').push({
                     titulli: titulli,
-                    foto: document.getElementById('f').value || (videoId ? `https://img.youtube.com/vi/${videoId}/maxresdefault.jpg` : ''),
+                    foto: foto || (videoId ? `https://img.youtube.com/vi/${videoId}/maxresdefault.jpg` : ''),
                     video: videoId,
                     kategoria: document.getElementById('k').value,
-                    pershkrimi: document.getElementById('p').value
+                    pershkrimi: document.getElementById('p').value,
+                    data: new Date().toLocaleString()
                 });
-                alert("U postua!");
+                alert("Lajmi u publikua me sukses!");
                 location.reload();
+            } else {
+                alert("Ju lutem plotësoni titullin dhe të paktën një foto ose video!");
             }
         }
 
@@ -84,7 +99,7 @@
                 l.innerHTML += `<div class="item"><span>${c.val().titulli}</span><button class="btn-del" onclick="del('${c.key}')">FSHIJ</button></div>`;
             });
         });
-        function del(id) { if(confirm("Fshij?")) db.ref('lajmet/'+id).remove(); }
+        function del(id) { if(confirm("A jeni i sigurt që dëshironi ta fshini këtë lajm?")) db.ref('lajmet/'+id).remove(); }
     </script>
 </body>
 </html>
