--- a/admin.html
+++ b/admin.html
@@ -9,15 +9,15 @@
     <style>
         body { background: #050505; color: white; font-family: sans-serif; margin: 0; padding: 15px; }
         .admin-box { max-width: 600px; margin: auto; background: #111; padding: 25px; border-radius: 15px; border: 1px solid #222; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
-        h2 { color: red; text-align: center; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 25px; }
+        h2 { color: red; text-align: center; text-transform: uppercase; margin-bottom: 25px; }
         label { font-size: 11px; color: #888; text-transform: uppercase; font-weight: bold; display: block; margin-bottom: 5px; }
         input, textarea, select { width: 100%; padding: 12px; margin-bottom: 20px; background: #1a1a1a; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; font-size: 15px; }
-        input:focus, textarea:focus { border-color: red; outline: none; }
-        button { width: 100%; padding: 15px; background: red; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; font-size: 16px; transition: 0.3s; }
-        button:hover { background: darkred; transform: scale(1.02); }
+        input:focus { border-color: red; outline: none; }
+        button { width: 100%; padding: 15px; background: red; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; font-size: 16px; }
+        button:hover { background: darkred; }
         .list-title { margin-top: 40px; border-bottom: 2px solid #222; padding-bottom: 10px; font-size: 18px; color: red; }
         .item { background: #0a0a0a; padding: 15px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border-radius: 8px; border: 1px solid #222; }
-        .btn-del { background: transparent; color: #ff4444; padding: 6px 12px; border: 1px solid #ff4444; border-radius: 5px; width: auto; font-size: 12px; }
+        .btn-del { background: transparent; color: #ff4444; padding: 6px 12px; border: 1px solid #ff4444; border-radius: 5px; width: auto; font-size: 12px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -25,13 +25,13 @@
         <h2>PANELI I KONTROLLIT</h2>
         
         <label>Titulli i Lajmit</label>
-        <input type="text" id="t" placeholder="Shkruaj titullin këtu...">
+        <input type="text" id="t" placeholder="Shkruaj titullin...">
 
         <label>Linku i Fotos (URL)</label>
         <input type="text" id="f" placeholder="Ngjit linkun e fotos...">
 
         <label>YouTube Video URL (Opsionale)</label>
-        <input type="text" id="v" placeholder="Psh: https://www.youtube.com/watch?v=...">
+        <input type="text" id="v" placeholder="Linku i videos nëse ka...">
 
         <label>Kategoria</label>
         <select id="k">
@@ -43,11 +43,11 @@
         </select>
 
         <label>Përmbajtja e Lajmit</label>
-        <textarea id="p" rows="6" placeholder="Shkruaj tekstin e plotë të lajmit këtu..."></textarea>
+        <textarea id="p" rows="6" placeholder="Shkruaj lajmin këtu..."></textarea>
 
         <button onclick="save()">PUBLIKO LAJMIN</button>
 
-        <div class="list-title">LAJMET E FUNDIT</div>
+        <div class="list-title">MENAXHO LAJMET</div>
         <div id="list"></div>
     </div>
 
@@ -83,13 +83,12 @@
                     foto: foto || (videoId ? `https://img.youtube.com/vi/${videoId}/maxresdefault.jpg` : ''),
                     video: videoId,
                     kategoria: document.getElementById('k').value,
-                    pershkrimi: document.getElementById('p').value,
-                    data: new Date().toLocaleString()
+                    pershkrimi: document.getElementById('p').value
                 });
-                alert("Lajmi u publikua me sukses!");
+                alert("U publikua!");
                 location.reload();
             } else {
-                alert("Ju lutem plotësoni titullin dhe të paktën një foto ose video!");
+                alert("Shkruaj titullin dhe vendos një foto ose video!");
             }
         }
 
@@ -99,7 +98,12 @@
                 l.innerHTML += `<div class="item"><span>${c.val().titulli}</span><button class="btn-del" onclick="del('${c.key}')">FSHIJ</button></div>`;
             });
         });
-        function del(id) { if(confirm("A jeni i sigurt që dëshironi ta fshini këtë lajm?")) db.ref('lajmet/'+id).remove(); }
+
+        function del(id) {
+            if(confirm("A dëshiron ta fshish?")) {
+                db.ref('lajmet/' + id).remove();
+            }
+        }
     </script>
 </body>
 </html>
