--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRENICA SOT | Ballina</title>
+    <title>KANAL DRENAS | Lajmet e fundit</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        :root { --red: #ff0000; --dark: #000; }
-        body { background: var(--dark); color: white; font-family: sans-serif; margin: 0; }
-        header { background: #000; padding: 20px; text-align: center; border-bottom: 4px solid var(--red); position: sticky; top: 0; z-index: 100; }
-        .logo { font-size: 30px; font-weight: 900; text-transform: uppercase; text-decoration: none; color: #fff; }
-        .logo span { color: var(--red); }
-        .container { max-width: 1200px; margin: 20px auto; padding: 20px; }
-        .news-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); gap: 25px; }
-        .news-card { background: #111; border-radius: 15px; overflow: hidden; border: 1px solid #222; transition: 0.3s; cursor: pointer; }
-        .news-card:hover { border-color: var(--red); transform: translateY(-5px); }
-        .media-container { width: 100%; height: 220px; background: #000; pointer-events: none; }
-        iframe, img { width: 100%; height: 100%; object-fit: cover; border: none; }
+        body { background: #000; color: white; font-family: sans-serif; margin: 0; padding: 0; }
+        header { background: #000; padding: 15px; text-align: center; border-bottom: 3px solid #ffcc00; }
+        .logo { font-size: 28px; font-weight: 900; color: white; text-decoration: none; }
+        .logo span { color: #ffcc00; }
+        .container { max-width: 900px; margin: auto; padding: 15px; }
+        .lajmi { background: #111; margin-bottom: 20px; border-radius: 10px; overflow: hidden; border: 1px solid #222; cursor: pointer; }
+        .lajmi img { width: 100%; height: 250px; object-fit: cover; }
         .info { padding: 15px; }
-        .badge { background: var(--red); font-size: 10px; padding: 4px 8px; border-radius: 4px; font-weight: bold; text-transform: uppercase; }
-        h2 { font-size: 18px; margin: 10px 0; color: #fff; line-height: 1.3; }
-        p { color: #888; font-size: 14px; height: 40px; overflow: hidden; }
+        .info h3 { margin: 0; font-size: 20px; }
+        .kat { color: #ffcc00; font-weight: bold; font-size: 12px; text-transform: uppercase; }
     </style>
 </head>
 <body>
-    <header><a href="index.html" class="logo">DRENICA<span>SOT</span></a></header>
-    <div class="container"><div class="news-grid" id="news-container"></div></div>
+    <header><a href="index.html" class="logo">KANAL <span>DRENAS</span></a></header>
+    <div class="container" id="lajmet">Duke ngarkuar...</div>
 
     <script>
         const firebaseConfig = {
@@ -39,26 +34,19 @@
             appId: "1:893085364638:web:2db59e6ec72ad7e7c1a68f"
         };
         firebase.initializeApp(firebaseConfig);
-        
         firebase.database().ref('lajmet').on('value', (snap) => {
-            const container = document.getElementById('news-container');
-            container.innerHTML = '';
+            const div = document.getElementById('lajmet'); div.innerHTML = '';
             snap.forEach((child) => {
                 const l = child.val();
-                const id = child.key;
-                let mediaHTML = l.video ? 
-                    `<iframe src="https://www.youtube.com/embed/${l.video}" frameborder="0"></iframe>` : 
-                    `<img src="${l.foto}">`;
-                
-                container.innerHTML += `
-                    <div class="news-card" onclick="window.location='lajmi.html?id=${id}'">
-                        <div class="media-container">${mediaHTML}</div>
+                div.innerHTML = `
+                    <div class="lajmi" onclick="location.href='lajmi.html?id=${child.key}'">
+                        <img src="${l.foto}">
                         <div class="info">
-                            <span class="badge">${l.kategoria}</span>
-                            <h2>${l.titulli}</h2>
-                            <p>${l.pershkrimi}</p>
+                            <span class="kat">${l.kategoria}</span>
+                            <h3>${l.titulli}</h3>
                         </div>
-                    </div>`;
+                    </div>
+                ` + div.innerHTML;
             });
         });
     </script>
