--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <style>
         body { background: #000; color: white; font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; }
         
-        /* Header dhe Menu */
         header { background: #000; padding: 15px 0; text-align: center; border-bottom: 2px solid #222; position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 28px; font-weight: 900; color: white; text-decoration: none; text-transform: uppercase; }
         .logo span { color: #ffcc00; }
@@ -23,7 +22,6 @@
         .container { max-width: 900px; margin: 20px auto; padding: 0 15px; }
         .section-title { border-left: 4px solid #ffcc00; padding-left: 10px; margin-bottom: 20px; font-size: 20px; text-transform: uppercase; }
 
-        /* Kartelat e Lajmeve */
         .lajmi { background: #0d0d0d; margin-bottom: 20px; border-radius: 10px; overflow: hidden; border: 1px solid #222; cursor: pointer; transition: 0.3s; }
         .lajmi:hover { border-color: #ffcc00; }
         .lajmi img { width: 100%; height: 250px; object-fit: cover; }
@@ -32,9 +30,8 @@
         .kat { background: #ffcc00; color: #000; padding: 2px 8px; font-weight: bold; font-size: 11px; border-radius: 3px; }
         .info h3 { margin: 10px 0 0 0; font-size: 20px; line-height: 1.3; }
 
-        /* Footer */
         footer { text-align: center; padding: 40px 20px; background: #080808; border-top: 1px solid #222; margin-top: 50px; }
-        .footer-links a { color: #ffcc00; text-decoration: none; margin: 0 10px; font-size: 13px; }
+        .footer-links a { color: #ffcc00; text-decoration: none; margin: 0 10px; font-size: 13px; font-weight: bold; }
         .copyright { color: #555; font-size: 11px; margin-top: 15px; }
     </style>
 </head>
@@ -59,8 +56,9 @@
 
     <footer>
         <div class="footer-links">
-            <a href="privatesia.html">Politika e Privatësisë</a> | 
+            <a href="privatesia.html">Privatësia</a>
             <a href="rreth-nesh.html">Rreth Nesh</a>
+            <a href="kontakti.html">Kontakti</a>
         </div>
         <p class="copyright">© 2026 KANAL DRENAS. Të gjitha të drejtat e rezervuara.</p>
     </footer>
@@ -84,7 +82,7 @@
             snap.forEach((child) => {
                 teGjithaLajmet.push({ id: child.key, ...child.val() });
             });
-            teGjithaLajmet.reverse(); // Lajmet e reja lart
+            teGjithaLajmet.reverse();
             shfaqLajmet(teGjithaLajmet);
         });
 
@@ -92,13 +90,13 @@
             const list = document.getElementById('lajmet-list');
             list.innerHTML = '';
             if(lajmet.length === 0) {
-                list.innerHTML = '<p style="text-align:center; color:#666;">Nuk ka lajme në këtë kategori.</p>';
+                list.innerHTML = '<p style="text-align:center; color:#666;">Nuk ka lajme këtu.</p>';
                 return;
             }
             lajmet.forEach((l) => {
                 list.innerHTML += `
                     <div class="lajmi" onclick="location.href='lajmi.html?id=${l.id}'">
-                        <img src="${l.foto}">
+                        <img src="${l.foto}" onerror="this.src='https://via.placeholder.com/800x450/000/ffcc00?text=KANAL+DRENAS'">
                         <div class="info">
                             <span class="kat">${l.kategoria}</span>
                             <h3>${l.titulli}</h3>
@@ -109,7 +107,6 @@
         }
 
         function filtroLajmet(kat) {
-            // Ndrysho stilin e menyse
             const links = document.querySelectorAll('nav a');
             links.forEach(a => a.classList.remove('active'));
             event.target.classList.add('active');
