--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <style>
         body { background: #000; color: white; font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; }
         
-        /* LOGO E RE PROFESIONALE */
+        /* LOGO E RE PROFESIONALE ME BOX */
         header { 
             background: #000; 
-            padding: 25px 0; 
+            padding: 30px 0; 
             text-align: center; 
             border-bottom: 3px solid #ffcc00; 
             position: sticky; 
@@ -27,7 +27,7 @@
             color: #000; 
             padding: 8px 18px; 
             font-weight: 900; 
-            font-size: 28px; 
+            font-size: 30px; 
             border-radius: 6px; 
             font-family: 'Arial Black', sans-serif; 
             vertical-align: middle;
@@ -36,8 +36,8 @@
         .logo-text { 
             color: #ffcc00; 
             font-weight: 900; 
-            font-size: 28px; 
-            margin-left: 8px; 
+            font-size: 30px; 
+            margin-left: 10px; 
             font-family: 'Arial Black', sans-serif; 
             vertical-align: middle; 
             letter-spacing: 1px;
@@ -61,16 +61,15 @@
         .kat { background: #ffcc00; color: #000; padding: 3px 10px; font-weight: 900; font-size: 12px; border-radius: 4px; text-transform: uppercase; }
         .info h3 { margin: 15px 0 0 0; font-size: 22px; line-height: 1.4; font-weight: 700; color: #fff; }
 
-        /* FOOTER */
+        /* FOOTER ME LINQE */
         footer { text-align: center; padding: 50px 20px; background: #080808; border-top: 1px solid #222; margin-top: 60px; }
         .footer-links { margin-bottom: 20px; }
         .footer-links a { color: #ffcc00; text-decoration: none; margin: 0 12px; font-size: 14px; font-weight: bold; }
-        .footer-links a:hover { text-decoration: underline; }
         .copyright { color: #555; font-size: 12px; margin-top: 15px; letter-spacing: 1px; }
 
         /* Mobile Optimization */
         @media (max-width: 600px) {
-            .logo-box, .logo-text { font-size: 22px; }
+            .logo-box, .logo-text { font-size: 24px; }
             .lajmi img { height: 200px; }
             .info h3 { font-size: 18px; }
         }
@@ -134,7 +133,7 @@
             const list = document.getElementById('lajmet-list');
             list.innerHTML = '';
             if(lajmet.length === 0) {
-                list.innerHTML = '<p style="text-align:center; color:#666; padding: 50px 0;">Nuk ka lajme në këtë kategori aktualisht.</p>';
+                list.innerHTML = '<p style="text-align:center; color:#666; padding: 50px 0;">Nuk ka lajme në këtë kategori.</p>';
                 return;
             }
             lajmet.forEach((l) => {
@@ -154,8 +153,7 @@
             const links = document.querySelectorAll('nav a');
             links.forEach(a => a.classList.remove('active'));
             
-            // Highlight the clicked menu item
-            if (event) {
+            if (event && event.target) {
                 event.target.classList.add('active');
             }
 
