--- a/admin.html
+++ b/admin.html
@@ -9,19 +9,20 @@
     
     <style>
         body { background: #000; color: white; font-family: 'Segoe UI', Arial, sans-serif; margin: 0; display: flex; align-items: center; justify-content: center; min-height: 100vh; }
-        #login-screen { background: #0d0d0d; padding: 40px; border-radius: 15px; border: 1px solid #222; width: 100%; max-width: 380px; text-align: center; }
+        #login-screen { background: #0d0d0d; padding: 40px; border-radius: 15px; border: 1px solid #222; width: 100%; max-width: 380px; text-align: center; box-shadow: 0 15px 35px rgba(0,0,0,0.9); }
         .logo-login { margin-bottom: 30px; font-size: 26px; text-transform: uppercase; font-weight: bold; }
         .logo-login span { background: #ffcc00; color: #000; padding: 5px 12px; border-radius: 5px; margin-right: 5px; }
         .input-group { text-align: left; margin-bottom: 20px; }
         label { display: block; color: #ffcc00; font-size: 12px; font-weight: bold; margin-bottom: 8px; text-transform: uppercase; }
-        input, textarea, select { width: 100%; padding: 14px; background: #1a1a1a; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; }
-        #login-btn, #publish-btn { width: 100%; padding: 16px; background: #ffcc00; color: #000; border: none; border-radius: 8px; font-weight: 900; cursor: pointer; text-transform: uppercase; margin-top: 15px; }
+        input, textarea, select { width: 100%; padding: 14px; background: #1a1a1a; border: 1px solid #333; color: #fff; border-radius: 8px; box-sizing: border-box; font-size: 16px; }
+        .show-pass { display: flex; align-items: center; margin-top: 10px; cursor: pointer; color: #ffcc00; font-size: 13px; font-weight: bold; }
+        #login-btn, #publish-btn { width: 100%; padding: 16px; background: #ffcc00; color: #000; border: none; border-radius: 8px; font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 16px; margin-top: 15px; }
         #admin-panel { display: none; width: 100%; max-width: 700px; padding: 20px; margin: 40px auto; }
         .admin-box { background: #0d0d0d; padding: 30px; border-radius: 15px; border: 1px solid #222; }
         .upload-section { background: #151515; padding: 20px; border-radius: 10px; border: 2px dashed #333; margin-bottom: 25px; text-align: center; }
         #status { color: #ffcc00; font-size: 13px; margin-top: 12px; font-weight: bold; }
         .item { background: #111; padding: 15px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border-radius: 8px; border: 1px solid #222; }
-        .btn-del { background: transparent; color: #ff4444; border: 1px solid #ff4444; padding: 6px 12px; border-radius: 5px; cursor: pointer; }
+        .btn-del { background: transparent; color: #ff4444; border: 1px solid #ff4444; padding: 6px 12px; border-radius: 5px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -35,23 +36,26 @@
         <div class="input-group">
             <label>Fjalëkalimi</label>
             <input type="password" id="pass_f" placeholder="••••••••">
+            <div class="show-pass" onclick="toggleP()">
+                <input type="checkbox" id="c_box"> <span>Shfaq fjalëkalimin</span>
+            </div>
         </div>
         <button id="login-btn" onclick="hyr()">HYR NË PANEL</button>
     </div>
 
     <div id="admin-panel">
         <div class="admin-box">
-            <h2 style="color:#ffcc00; text-align:center;">PANELI I POSTIMEVE</h2>
+            <h2 style="color:#ffcc00; text-align:center; text-transform:uppercase;">Posto Lajm të Ri</h2>
             
             <div class="upload-section">
-                <label style="color:#ffcc00;">NGARKO FOTO NGA TELEFONI/PC</label>
-                <input type="file" id="file_in" accept="image/*" onchange="uploadToImgBB()" style="margin-top:10px;">
+                <label style="color:#ffcc00; font-size:12px;">NGARKO FOTO NGA PAJISJA (IMGBB)</label>
+                <input type="file" id="file_in" accept="image/*" onchange="uploadPhoto()" style="margin-top:10px;">
                 <div id="status">Gati për ngarkim...</div>
             </div>
 
             <label>Titulli i Lajmit</label>
             <input type="text" id="t">
-            <label>Foto URL (Mbushet vetë)</label>
+            <label>Linku i Fotos (Mbushet vetë)</label>
             <input type="text" id="f">
             <label>YouTube Link (Opsionale)</label>
             <input type="text" id="v">
@@ -63,15 +67,20 @@
                 <option value="DIASPORA">DIASPORA</option>
                 <option value="SHOWBIZ">SHOWBIZ</option>
             </select>
-            <label>Përmbajtja</label>
+            <label>Përmbajtja e Lajmit</label>
             <textarea id="p" rows="8"></textarea>
-            <button id="publish-btn" onclick="ruaj()">PUBLIKO LAJMIN</button>
+            <button id="publish-btn" onclick="ruaj()">PUBLIKO TANI</button>
             <div id="list" style="margin-top:30px;"></div>
         </div>
     </div>
 
     <script>
         const API_KEY = "eb62a6907856c805db10887e57fa34ea";
+
+        function toggleP() {
+            var x = document.getElementById("pass_f");
+            x.type = (x.type === "password") ? "text" : "password";
+        }
 
         function hyr() {
             if(document.getElementById('user_f').value === "admin" && document.getElementById('pass_f').value === "DRENASI2026") {
@@ -92,10 +101,9 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
-        function uploadToImgBB() {
-            const fileInput = document.getElementById('file_in');
+        function uploadPhoto() {
+            const file = document.getElementById('file_in').files[0];
             const status = document.getElementById('status');
-            const file = fileInput.files[0];
             if (!file) return;
 
             status.innerText = "Duke u ngarkuar...";
@@ -111,11 +119,8 @@
                 if (data.success) {
                     document.getElementById('f').value = data.data.url;
                     status.innerText = "✅ U ngarkua me sukses!";
-                } else {
-                    status.innerText = "❌ Gabim gjatë ngarkimit.";
-                }
-            })
-            .catch(() => { status.innerText = "❌ Lidhja dështoi."; });
+                } else { status.innerText = "❌ Gabim!"; }
+            });
         }
 
         function ruaj() {
@@ -129,7 +134,7 @@
                     video: document.getElementById('v').value,
                     data: Date.now()
                 }).then(() => { alert("U publikua!"); location.reload(); });
-            } else { alert("Plotëso Titullin, Foton dhe Tekstin!"); }
+            }
         }
 
         db.ref('lajmet').on('value', (snap) => {
