--- a/lajmi.html
+++ b/lajmi.html
@@ -12,6 +12,7 @@
     <meta property="og:image" id="fb-img" content="https://lindi115.github.io/kanaldrenas/logo.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="fb:app_id" content="966242223397117">
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
